# checker

./: .env  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  expres-server.dockerfile  main.py  package.json  requirements.txt
.github/workflows/: integrate-app-and-auth_servis.yml  python-app.yml
auth-servis/: CMakeLists.txt  Dockerfile  config.example.nossl.json  docker-compose.yml  init.sql  run  servisCfg.example.json
auth-servis/deb/: auth-servis-1.0.0-Linux.deb
auth-servis/docks/: auth-servis.yaml
auth-servis/src/app/: App.cc
auth-servis/src/controllers/login/: LoginController.cc
auth-servis/src/controllers/logout/: LogoutController.cc  LogoutController.h
auth-servis/src/controllers/registration/: RegistrationController.cc
auth-servis/src/controllers/updateaccess/: UpdateAssessController.cc
auth-servis/src/utils/: ServisConfig.cc  ServisConfig.h  _auth-servisError.cc  _auth-servisError.h  _database.cpp  _database.h  auth.cc
src/js/: cabinet.js  download.js  login.js  server.js
src/python/database/: __init__.py  database.py
src/python/dependencies/: auth.py  auth_stub.py
src/python/middlewares/: rate_limiter.py
src/python/models/: operation.py  template.py  user.py
src/python/routers/: __init__.py  auth_registration_router.py  file_router.py  template_router.py
src/python/schemas/: file_schema.py  template_schema.py  user_schema.py
src/python/services/: file_services.py  template_services.py  user_sync_services.py
src/python/utils/: docx_zip_comments.py  logger_utils.py  token_utils.py
src/python/utils/document_analyzer/: __init__.py  core.py  helpers.py  listing_skipper.py  template_parser.py  (+5 more)
tests/: conftest.py  test_auth.py  test_docx_comments.py  test_example.py  test_registration_request.py  test_templates.py
uploaded_files/: гайд wsl.docx
views/css/: auth-servis.css  settings-style.css  style.css
views/html/: cabinet.html  download.html  index.html  login.html  registration.html  settings.html
views/js/: button.js
(+9 files in other folders)
